Fix field settings ‘bleed’ when used with Field Manager

--- a/src/resources/src/scss/_configurator.scss
+++ b/src/resources/src/scss/_configurator.scss
@@ -18,6 +18,7 @@
 .supertable-configurator .settings-hidden {
     position: fixed;
     z-index: -1;
+    display: none;
 }
 
 .supertable-configurator .stc-sidebar {
